# serializer version: 1
# name: test_dependency_check_playwright
  '''
  Missing required dependencies:
  • Node.js
  • npm
  
  Please install the missing dependencies and try again.
  
  '''
# ---
# name: test_info_command_existing
  '''
  ╭─────────────── Server Information ────────────────╮
  │ Server: filesystem                                │
  │ Description: MCP server for filesystem operations │
  │ Maintainer: Anthropic                             │
  ╰───────────────────────────────────────────────────╯
                  Required Configuration                 
   •  Allowed directory paths that the server can access 
  Dependencies
   •  Node.js 
   •  npm     
  
  '''
# ---
# name: test_info_command_nonexisting
  '''
  Server not found: nonexistent
  
  '''
# ---
# name: test_info_command_playwright
  '''
  ╭────────────────────── Server Information ──────────────────────╮
  │ Server: playwright                                             │
  │ Description: MCP server for browser automation with Playwright │
  │ Maintainer: Anthropic                                          │
  ╰────────────────────────────────────────────────────────────────╯
  Dependencies
   •  Node.js 
   •  npm     
  
  '''
# ---
# name: test_install_command_nonexisting
  '''
  Server not found: nonexistent
  
  '''
# ---
# name: test_search_command_no_match
  '''
  No servers found matching: nonexistent
  
  '''
# ---
# name: test_search_command_with_match
  '''
                       Found 1 matching servers                     
  ┏━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━┓
  ┃ Server     ┃ Description                          ┃ Maintainer ┃
  ┡━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━┩
  │ filesystem │ MCP server for filesystem operations │ Anthropic  │
  └────────────┴──────────────────────────────────────┴────────────┘
  
  '''
# ---
